--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "ejs": "^3.1.2",
     "express": "^4.17.1",
+    "mongodb": "^3.5.7",
     "nodemon": "^2.0.3",
     "validator": "^13.0.0"
   }
