--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "md5": "^2.2.1",
     "mongodb": "^3.5.7",
     "nodemon": "^2.0.3",
+    "sanitize-html": "^1.24.0",
     "validator": "^13.0.0"
   }
 }
