Monitor node and webpack on file changes

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Small simple social app for learning MEAN stack and MVC pattern",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon db",
+    "dev": "start nodemon db --ignore fronted-js --ignore public/ && start webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
